--- a/Amit/public/login/style.scss
+++ b/Amit/public/login/style.scss
@@ -6,7 +6,7 @@ body{
     background-color: darkslategrey;
 }
 
-.register-form{
+.login-form{
     height: 30vw;
     width: 30vw;
     position: relative;
